<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    android:backgroundTint="@color/fondo_app"
    android:orientation="vertical"
    android:textAlignment="gravity"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/fondo_tarjeta_sexo"
            android:backgroundTint="@color/fondo_tarjeta_sexo"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/imBtnMasculino"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="54dp"
                    android:background="@drawable/male_icon"
                    android:contentDescription="@string/bottom_sheet_behavior"
                    android:scaleType="fitCenter"
                    android:src="@drawable/male_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/male_icon" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="42dp"
                    android:text="MASCULINO"
                    android:textColor="@color/color_texto"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imBtnMasculino" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/fondo_tarjeta_sexo"
            android:backgroundTint="@color/fondo_tarjeta_sexo"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="43dp"
                    android:text="@string/femenino"
                    android:textColor="@color/color_texto"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imBtnFemenino" />

                <ImageButton
                    android:id="@+id/imBtnFemenino"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="37dp"
                    android:layout_marginEnd="54dp"
                    android:background="@drawable/female_icon"
                    android:contentDescription="@string/bottom_sheet_behavior"
                    android:scaleType="fitCenter"
                    android:src="@drawable/female_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/female_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/fondo_tarjeta"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_weight=".4"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/altura"
                    android:textColor="@color/color_texto"
                    android:textSize="18sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvaltura"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="-20dp"
                        android:text="150"
                        android:textColor="@color/white"
                        android:textSize="42sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/cm"
                        android:textColor="@color/color_texto"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.599"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <SeekBar
                        android:id="@+id/seekAltura"
                        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
                        android:layout_width="367dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:max="120"
                        android:progress="30"
                        android:progressTint="#FAFAFA"
                        android:scrollbarDefaultDelayBeforeFade="60"
                        android:thumbTint="#EC1455"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvaltura"
                        app:tickMarkTint="#FFFFFF" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/fondo_tarjeta"
            android:backgroundTint="@color/fondo_tarjeta"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.widget.Button
                    android:id="@+id/btnpesomas"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="35dp"
                    android:background="@drawable/forma_redonda_boton"
                    android:text="+"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:cornerRadius="999dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnpesomenos"
                    app:layout_constraintTop_toBottomOf="@+id/txtnumpeso" />

                <TextView
                    android:id="@+id/txtedad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="66dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="67dp"
                    android:text="PESO"
                    android:textColor="@color/color_texto"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtnumpeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="61dp"
                    android:layout_marginEnd="62dp"
                    android:text="75"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.523"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtedad" />

                <android.widget.Button
                    android:id="@+id/btnpesomenos"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="26dp"
                    android:background="@drawable/forma_redonda_boton"
                    android:text="-"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:cornerRadius="999dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnpesomas"
                    app:layout_constraintHorizontal_bias="0.279"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtnumpeso"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/fondo_tarjeta"
            android:backgroundTint="@color/fondo_tarjeta"
            app:cardCornerRadius="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.widget.Button
                    android:id="@+id/btnedadmas"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="35dp"
                    android:background="@drawable/forma_redonda_boton"
                    android:text="+"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:cornerRadius="999dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnedadmenos"
                    app:layout_constraintTop_toBottomOf="@+id/txtnumedad" />

                <android.widget.Button
                    android:id="@+id/btnedadmenos"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="26dp"
                    android:background="@drawable/forma_redonda_boton"
                    android:text="-"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:cornerRadius="999dp"
                    app:layout_constraintEnd_toStartOf="@+id/btnedadmas"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtnumedad" />

                <TextView
                    android:id="@+id/txtedad2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="52dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="53dp"
                    android:text="EDAD"
                    android:textColor="@color/color_texto"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtnumedad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="61dp"
                    android:layout_marginEnd="62dp"
                    android:text="25"
                    android:textColor="@color/white"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.523"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtedad2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:orientation="vertical">

        <android.widget.Button
            android:id="@+id/btncalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#EB1555"
            android:text="CALCULAR"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>